# nautobot-plugin-chatops-arista-cloudvision

./: .travis.yml  CHANGELOG.md  README.md  invoke.example.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
development/: docker-compose.base.yml  docker-compose.docs.yml  nautobot_config.py
docs/: index.md
nautobot-plugin-chatops-cloudvision/: __init__.py
nautobot-plugin-chatops-cloudvision/tests/: test_api.py
nautobot_chatops_arista_cloudvision/: __init__.py  cvpgrpcutils.py  utils.py  worker.py
nautobot_chatops_arista_cloudvision/tests/: __init__.py  test_api.py  test_basic.py
nautobot_chatops_extension_arista/: cvpgrpcutils.py  urls.py  utils.py  worker.py
nautobot_chatops_extension_arista/api/: __init__.py
nautobot_chatops_extension_arista/tests/: __init__.py  test_basic.py
nautobot_plugin_chatops_cloudvision/: __init__.py  utils.py  worker.py
nautobot_plugin_chatops_cloudvision/api/: __init__.py
nautobot_plugin_chatops_cloudvision/tests/: __init__.py  test_api.py  test_basic.py
