[tool.poetry]
name = "nautobot-chatops-arista-cloudvision"
version = "1.2.0"
description = "Nautobot Chatops Arista Cloudvision Integration"
authors = ["Network to Code, LLC <info@networktocode.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/nautobot/nautobot-plugin-chatops-arista-cloudvision"
repository = "https://github.com/nautobot/nautobot-plugin-chatops-arista-cloudvision"
keywords = ["nautobot", "nautobot-plugin"]
include = [
    "LICENSE",
    "README.md",
]
packages = [
    { include = "nautobot_chatops_arista_cloudvision" },
]

[tool.poetry.plugins."nautobot.workers"]
"cloudvision" = "nautobot_chatops_arista_cloudvision.worker:cloudvision_chatbot"

[tool.poetry.dependencies]
# Used for local development
nautobot = { version = "*", optional = true }
python = "^3.7"
protobuf = "^3.17"
cvprac = "^1.0.6"
cloudvision = "^1.1"
nautobot-chatops = "^1.5.0"
certifi = ">=2021.5.30,<2023.0.0"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coverage = "*"
django-debug-toolbar = "*"
flake8 = "*"
invoke = "*"
mkdocs = "*"
pydocstyle = "*"
# Pinning pylint to match nautobot core.
pylint = {version = "~2.14.5", python = "^3.7.2"}
pylint-django = "*"
yamllint = "*"

[tool.poetry.extras]
nautobot = ["nautobot"]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.pylint.master]
# Include the pylint_django plugin to avoid spurious warnings about Django patterns
load-plugins="pylint_django"
ignore=[".venv"]

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    too-few-public-methods,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "-vv --doctest-modules"
